compilers/ID/cool/regression/BASE_cgtest/old_cool/objref_incorrect.cl.stderr
./BASE_cgtest/objref_incorrect.cl:6: Type String of assigned expression does not conform to declared type Int of identifier a.
./BASE_cgtest/objref_incorrect.cl:6: Inferred return type String of method main does not conform to declared return type Int.
Compilation halted due to static semantic errors.
