compilers/ID/cool/regression/BASE_cgtest/old_cool/objref_incorrect.cl
Class Main is
  a : Int;
 
  b : String;

  main(): Int is a <- b end;
end;
